<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10sp"
    android:background="@color/background"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15sp"
    android:paddingBottom="5sp"
    android:text="@string/credits_header_description"
    android:textColor="@color/header_text"
    android:textStyle="bold"
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/credits_description"
    android:textColor="@color/text"
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15sp"
    android:paddingBottom="5sp"
    android:text="@string/credits_header_authors"
    android:textColor="@color/header_text"
    android:textStyle="bold"
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/credits_authors"
    android:textColor="@color/text"
    />
</LinearLayout>