<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    >
<TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="40sp"
    android:layout_marginBottom="40sp"
    android:textColor="@color/title"
    android:text="@string/app_name"
    android:textStyle="bold"
    android:textSize="32sp"
    />
<Button
    android:id="@+id/open_level_chooser"
    android:text="@string/open_level_chooser"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom = "5sp"
    android:layout_marginLeft = "10sp"
    android:layout_marginRight = "10sp"
    android:gravity="center_horizontal"
    android:padding="3sp"
    android:textSize="24sp"
    android:textColor="@color/menu_button_text"
    android:background="@drawable/menu_button"
    android:onClick="openLevelChooser"
    />
<Button
    android:id="@+id/open_tutorial_button"
    android:text="@string/open_tutorial"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom = "5sp"
    android:layout_marginLeft = "10sp"
    android:layout_marginRight = "10sp"
    android:gravity="center_horizontal"
    android:padding="3sp"
    android:textSize="24sp"
    android:textColor="@color/menu_button_text"
    android:background="@drawable/menu_button"
    android:onClick="openTutorial"
    />
<Button
    android:id="@+id/open_credits_button"
    android:text="@string/open_credits"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom = "5sp"
    android:layout_marginLeft = "10sp"
    android:layout_marginRight = "10sp"
    android:gravity="center_horizontal"
    android:padding="3sp"
    android:textSize="24sp"
    android:textColor="@color/menu_button_text"
    android:background="@drawable/menu_button"
    android:onClick="openCredits"
    />
</LinearLayout>

